# elpi

./: Makefile  elpi.opam
.github/workflows/: main.yml
src/: API.ml  ast.ml  ast.mli  compiler.ml  dune  elpi.ml  lexer.mll  lexer2.mll  parser.ml  parser2.mly  parser2Messages.messages  test_lexer.ml  test_parser.ml  tokens.mly
